--- a/game/real-garbage-truck.html
+++ b/game/real-garbage-truck.html
@@ -4,8 +4,9 @@
                <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1">
                <meta http-equiv="X-UA-Compatible" content="IE=edge">
-               <title>Real Garbage Truck Unblocked: Play Now for Free on FAF Games</title>
+               <title>Real Garbage Truck Unblocked: Play Now at 76 Unblocked Games</title>
                <meta name="description" content="
+Experience the thrill of driving a real garbage truck. Collect trash, navigate through city streets, and complete challenging missions. Play now!
                 ">
               <meta name="news_keywords" content="real garbage truck game
               garbage trucks toys
@@ -14,9 +15,9 @@
               garbage truck simulator
               garbage trucks for kids
               garbage truck for sale">
-               <meta name="author" content="76 Unblocked Games Team">
-        <link rel="canonical" href="/game/real-garbage-truck.html" />
-	<meta name="publisher" content="FAF Games Team">
+               <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/real-garbage-truck.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
                <!-- Favicon -->
                <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -297,7 +298,7 @@
             <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1218,7 +1219,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
