--- a/game/sling-drift.html
+++ b/game/sling-drift.html
@@ -4,13 +4,13 @@
                <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
                <meta name="viewport" content="width=device-width, initial-scale=1">
                <meta http-equiv="X-UA-Compatible" content="IE=edge">
-               <title>Sling Drift Unblocked: Play Now for Free on FAF Games</title>
+               <title>Sling Drift Unblocked: Play Now at 76 Unblocked Games</title>
                <meta name="description" content=" Experience the thrill of Sling Drift! Navigate sharp corners and perfect your drifting skills in this addictive, Free to Play Racing Games. Play now and drift like a pro!">
              
               <meta name="keywords" content="Sling Drift, Sling Drift game, Play Sling Drift, Sling Drift online, Sling Drift unblocked, Sling Drift tips, Sling Drift guide, Sling Drift cheats, Sling Drift download, Sling Drift gameplay, Sling Drift APK, Sling Drift app, Sling Drift racing, Sling Drift drift game, Sling Drift high score">
-              <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/sling-drift.html" />
-	<meta name="publisher" content="FAF Games Team">
+              <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/sling-drift.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
                <!-- Favicon -->
                <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -291,7 +291,7 @@
               <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1224,7 +1224,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
