--- a/game/snow-rider-3d.html
+++ b/game/snow-rider-3d.html
@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Snow Rider 3D Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>Snow Rider 3D Unblocked: Play Now at 76 Unblocked Games</title>
+        <meta name="description" content="Enjoy the thrilling ride in Snow Rider 3D Unblocked. Dodge obstacles, collect gifts, and race through snowy slopes in this exciting winter game.">
         
         <meta name="title" content="Snow Rider 3D">
         <meta name="keywords" content="Snow Rider 3D Game, 3D Game, 3DGame, 3D Games, 3DGames, Game 3D, Games 3D, Game3D, Games3D">
@@ -17,9 +17,9 @@
         snow rider 3d mobile
         snow rider 3d html5
         snow rider 3d mathnook">
-        <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/snow-rider-3d.html" />
-	<meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/snow-rider-3d.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -310,7 +310,7 @@
        <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1167,7 +1167,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
