--- a/game/soccerbros.html
+++ b/game/soccerbros.html
@@ -5,8 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Soccerbros Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>Soccerbros Unblocked: Play Now at 76 Unblocked Games</title>
+        <meta name="description" content="Dive into the exciting world of Soccerbros, a fast-paced multiplayer soccer game with fun characters and intense matches. Play and test your soccer skills now.">
         <meta name="title" content="Axis Football League">
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free ">
         <meta name="news_keywords" content="axis football unblocked
@@ -17,10 +17,10 @@
         axis football 2022
         axis games
         axis football 2021">
-        <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/soccerbros.html" />
+        <meta name="author" content="76 Unblocked Games">
+       <link rel="canonical" href="https://76-unblockedgames.github.io/game/soccerbros.html" />
 	    <meta name="robots" content="index, follow">
-	    <meta name="publisher" content="FAF Games Team">
+	    <meta name="publisher" content="76 Unblocked Games">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -311,7 +311,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -657,7 +657,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
